Adjust elements to fix header cutoff

--- a/Style/StudentUIRegiStyle.css
+++ b/Style/StudentUIRegiStyle.css
@@ -103,17 +103,17 @@
 	display: block;
 	margin-right: auto;
 	/* margin-left: auto; */
-	width: 50%;
+	/* width: 50%;
 
     width: 400px;
-    height: auto;
+    height: auto; */
 
 
 }
 .header img.logo{
-	
-    width: 420px;
+    width: 95vw;
     height: auto;
+	max-width: 420px;
 
 }
 
@@ -218,7 +218,7 @@ input[type=date], input[type="radio"]{
 .input-field input[type="text"]{
     /* border: 1px solid #2196f3;
     border-radius: 5px; */
-    width: 20%;
+    width: 90%;
     min-width: 225px;
     max-width: 400px;
     margin-right: 25px;
@@ -246,15 +246,15 @@ input[type="date"]{
 }
 
 .LastSchool input[type="text"]{
-    width: 20%;
+    width: 90%;
     min-width: 225px;
     max-width: 400px;
     margin-right: 25px;
 }
 
 #CompleteAddress, #LastSchoolAddress, #FatherAddress, #FatherWorkAddress, #MotherAddress, #MotherWorkAddress {
-    width: 43%;
-    min-width: 400px;
+    width: 90%;
+    min-width: 225px;
     max-width: 700px;
     margin-right: 10px;
 }
